--- a/FlaskIntroduction/templates/bootstrapuser.html
+++ b/FlaskIntroduction/templates/bootstrapuser.html
@@ -1,5 +1,5 @@
 {% extends "bootstrap/base.html" %}
-
+{% block title %}{% endblock %}
 {% block navbar %}
 <div class="navbar navbar-inverse" role="navigation">
     <div>
@@ -24,7 +24,7 @@
 {% endblock %}
 
 {% block content %}
-<div class=container"">
+<div class="container">
     <div class="page-header">
         <h1>Hello,{{ username }}!</h1>
     </div>
