--- a/FlaskIntroduction/templates/index.html
+++ b/FlaskIntroduction/templates/index.html
@@ -10,6 +10,7 @@
 {% block title %}Flasky{% endblock %}
 
 {% block page_content %}
+{{ super() }}
 <div class="page-header">
     <h1>Hello, {% if name %}{{ name }}{% else %}Stranger{% endif %}!</h1>
 </div>
